--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -4,16 +4,20 @@
 /node_modules
 /.pnp
 .pnp.js
-.env
 
+# testing
+/coverage
 
 # production
 /build
 
 # misc
 .DS_Store
-
-.env
+.env.local
+config.env
+.env.development.local
+.env.test.local
+.env.production.local
 
 npm-debug.log*
 yarn-debug.log*
